pms测试接口联通数据库通过

--- a/gulimall-core/pom.xml
+++ b/gulimall-core/pom.xml
@@ -12,15 +12,15 @@
     别人依赖核心包一定要将他放在最前面，可能与项目的其他jar版本冲突，按照先声明者优先就会用到我们核心包里面的jar，比如swagger引的guava-->
 
     <properties>
-        <mybatisplus.version>3.0.7.1</mybatisplus.version>
+        <mybatisplus.version>3.1.2</mybatisplus.version>
         <nacos.version>0.2.2.RELEASE</nacos.version>
-        <mybatisplus.version>3.0.7.1</mybatisplus.version>
+<!--        <mybatisplus.version>3.0.7.1</mybatisplus.version>-->
         <mysql.version>5.1.47</mysql.version>
         <swagger.version>2.9.2</swagger.version>
     </properties>
 
     <dependencies>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <version>${nacos.version}</version>
@@ -29,6 +29,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
             <version>${nacos.version}</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
         </dependency>
 
         <dependency>
@@ -47,6 +53,8 @@
             <artifactId>mybatis-plus</artifactId>
             <version>${mybatisplus.version}</version>
         </dependency>
+        <!--只要引入了jdbc-starter模块默认数据库驱动的版本，是由springboot版本仲裁中心控制的-->
+        <!--  换数据库驱动  -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
