--- a/gulimall-gateway/src/main/resources/application.yml
+++ b/gulimall-gateway/src/main/resources/application.yml
@@ -42,3 +42,9 @@ spring:
             - Path=/api/cart/**
           filters:
             - RewritePath=/api/(?<segment>.*), /$\{segment}
+        - id: gulimall_order_route
+          uri: lb://gulimall-order
+          predicates:
+            - Path=/api/order/**
+          filters:
+            - RewritePath=/api/(?<segment>.*), /$\{segment}
