--- a/gulimall-core/pom.xml
+++ b/gulimall-core/pom.xml
@@ -148,6 +148,12 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.10.5</version>
+        </dependency>
     </dependencies>
 
 </project>
